# json-typedef-validate

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: cli.yaml  main.rs
