[package]
name = "jtd-validate"
description = "Generates example data from JSON Typedef schemas"
version = "0.2.0"
license = "MIT"
authors = ["JSON Typedef Contributors"]
edition = "2018"

[dependencies]
jtd = "0.3"
serde_json = "^1"
anyhow = "^1"
clap = { version = "2.33.3", features = ["yaml"] }
serde = "^1"
